force-app/main/default/objects/Prankster__c/Prankster__c.object-meta.xml
<CustomObject>
    <label>Prankster</label>
    <nameField>
        <label>Prankster Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pranksters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>