force-app/main/default/objects/Prankster__c/fields/About_Me__c.field-meta.xml
<CustomField>
    <fullName>About_Me__c</fullName>
    <label>About Me</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>