force-app/main/default/objects/Prankster__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <formula>&quot;Prankster_User__r.Manager.FirstName&quot;+&quot; &quot;+&quot;Prankster_User__r.Manager.LastName&quot;</formula>
    <label>Manager</label>
    <type>Text</type>
</CustomField>