force-app/main/default/objects/Prankster__c/fields/Prankster_User__c.field-meta.xml
<CustomField>
    <fullName>Prankster_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prankster User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Prankster</relationshipName>
    <type>Lookup</type>
</CustomField>