force-app/main/default/objects/Prankster__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <formula>Prankster_User__r.Title</formula>
    <label>Title</label>
    <type>Text</type>
</CustomField>