force-app/main/default/objects/Prankster__c/fields/Total_Points_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Total_Points_Achieved__c</fullName>
    <label>Total Points Achieved</label>
    <summarizedField>Prank_Score__c.Score__c</summarizedField>
    <summaryForeignKey>Prank_Score__c.Prankster__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>