force-app/main/default/objects/Prankster__c/listViews/crt_TESTS.listView-meta.xml
<ListView>
    <fullName>crt_TESTS</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>CRT</value>
    </filters>
    <label>crt_TESTS</label>
</ListView>